<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="48dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:background="@drawable/round_bg"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/palindromeEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/palindromeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/palindrome"
            android:textColorHint="@color/black"
            android:background="@drawable/round_bg"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="@+id/palindromeEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/palindromeEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/palindromeEditTextLayout"
        android:backgroundTint="@color/green"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/checkButton"
        app:layout_constraintStart_toStartOf="@+id/checkButton"
        app:layout_constraintTop_toBottomOf="@+id/checkButton"
        android:backgroundTint="@color/green"/>


</androidx.constraintlayout.widget.ConstraintLayout>